# AdocWeave

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  README.adoc  README.md  THIRD_PARTY_NOTICES.adoc  deny.toml  dist-workspace.toml  flake.nix  release-manifest.json
.cargo/: audit.toml
.codex/: config.toml
.codex/rules/: commands.rules
.github/: dependabot.yml
.github/workflows/: native-artifact-smoke.yml  quality.yml  release-contract.yml  release-publish.yml  release.yml
crates/adocweave/: Cargo.toml
crates/adocweave-cli/: Cargo.toml
crates/adocweave-cli/src/: local_include.rs  main.rs
crates/adocweave-cli/tests/: cli.rs
crates/adocweave-host/: Cargo.toml
crates/adocweave-host/src/: lib.rs
crates/adocweave-lsp/: Cargo.toml
crates/adocweave-lsp/src/: backend.rs  lib.rs  main.rs  protocol.rs  service.rs  state.rs  tests.rs  transport.rs  workspace.rs
crates/adocweave-wasm/: Cargo.toml
crates/adocweave-wasm/src/: lib.rs  protocol_generated.rs  render_inputs.rs
crates/adocweave-wasm/tests/: conformance.rs
crates/adocweave/src/: attribute_occurrence.rs  attributes.rs  block_grammar.rs  block_model.rs  block_sequence.rs  budget.rs  catalog.rs  conformance.rs  core.rs  delimiter.rs  diagnostic.rs  document.rs  document_header.rs  execution.rs  extension.rs  formatter.rs  html.rs  inline.rs  inline_grammar.rs  inline_model.rs  json.rs  lib.rs  limits.rs  lint.rs  list_parser.rs  local_include.rs  lowering.rs  main.rs  parser.rs  parser_support.rs  preprocessor.rs  presentation.rs  projection.rs  reference.rs  render.rs  resolved.rs  resource.rs  source.rs  source_document.rs  source_lines.rs  (+8 more)
crates/adocweave/tests/: cli.rs  document_attribute_occurrences.rs  grammar.rs  properties.rs  public_document_model.rs  repository_governance.rs  security.rs
crates/asciiloom/: Cargo.toml
crates/asciiloom-lsp/: Cargo.toml
crates/asciiloom-lsp/src/: lib.rs  main.rs  state.rs  tests.rs  transport.rs
docs/: README.adoc  anchors.adoc  architecture.adoc  architecture.md  asciidoc-compatibility.adoc  browser-library.adoc  command-line.adoc  compatibility.adoc  compatibility.md  continuous-integration.adoc  core-profile.adoc  corpus.json  current-contract.adoc  dependency-governance.adoc  diagnostics.adoc  document-attributes.adoc  document-structure.adoc  extensions.adoc  formatting.adoc  git-workflow.adoc  grammar.adoc  grammar.md  html-contract.adoc  language-server.adoc  links-and-cross-references.adoc  lists.adoc  macros-and-resources.adoc  native-release.adoc  nix-installation.adoc  preprocessor.adoc  projections.adoc  reference-resolution.adoc  release-checklist.adoc  release-distribution.adoc  release-installation.adoc  release-integrity.adoc  release-workflow.adoc  render-inputs.adoc  roadmap.adoc  server-execution.adoc  (+16 more)
docs/adr/: 0001-single-analysis-pipeline.adoc  0002-host-extension-boundary.adoc  0003-runtime-adapters.adoc  0004-joint-syntax-and-fact-recognition.adoc  0005-zed-lsp-monorepo.adoc  0006-direct-stable-releases.adoc  0007-host-supplied-stylesheets.adoc  index.adoc
editors/zed/: Cargo.toml  LICENSE  README.adoc  README.md  extension.toml
editors/zed/languages/asciidoc/: config.toml  highlights.scm  injections.scm
editors/zed/languages/asciidoc_inline/: config.toml  highlights.scm  injections.scm
editors/zed/src/: install.rs  lib.rs
fixtures/: README.adoc  README.md
fixtures/anchors/: boundaries.adoc
fuzz/: Cargo.toml
fuzz/corpus/analyze/: basic.adoc
fuzz/corpus/process/: byte-seed  limits.adoc
fuzz/corpus/render/: security.adoc
fuzz/fuzz_targets/: analyze.rs  process.rs  render.rs
issues/: 001-workspace-and-cli.adoc  001-workspace-and-cli.md  002-source-position-and-line-index.adoc  002-source-position-and-line-index.md  003-diagnostic-model.adoc  003-diagnostic-model.md  004-source-lines.adoc  004-source-lines.md  005-paragraph-parser.adoc  005-paragraph-parser.md  006-paragraph-html.adoc  006-paragraph-html.md  007-basic-lint.adoc  007-basic-lint.md  008-basic-formatter.adoc  008-basic-formatter.md  009-heading-parser.adoc  009-heading-parser.md  010-heading-html-and-id.adoc  010-heading-html-and-id.md  011-heading-lint-and-symbols.adoc  011-heading-lint-and-symbols.md  012-inline-foundation.adoc  012-inline-foundation.md  013-monospace-inline.adoc  013-monospace-inline.md  014-strong-inline.adoc  014-strong-inline.md  015-emphasis-and-recovery.adoc  015-emphasis-and-recovery.md  016-literal-block.adoc  016-literal-block.md  017-source-block.adoc  017-source-block.md  018-limits-and-security.adoc  018-limits-and-security.md  019-lsp-document-sync.adoc  019-lsp-document-sync.md  020-lsp-diagnostics.adoc  020-lsp-diagnostics.md  (+166 more)
protocol/: public-api.json
release/: adocweave-dist-manifest.fixture.json  adocweave-dist-manifest.schema.json  distribution-plan.json
security/: dependency-boundaries.json  duplicate-dependencies.json  rustsec-advisory-db-revision.txt
tools/: browser-release-smoke.mjs  dependency-governance.sh  generate-protocol.mjs  generate-third-party-notices.mjs  generate-third-party-notices.test.mjs  native-release-smoke.mjs  package-browser-release.sh  package-release-artifacts.sh  package-zed-release.sh  process-lifecycle.mjs  process-lifecycle.test.mjs  release-contract.mjs  release-contract.test.mjs  release-installation-e2e.mjs  release-metadata.mjs  release-metadata.test.mjs  release-notes.mjs  release-notes.test.mjs  release-workflow-policy.mjs  release-workflow-policy.test.mjs  run-pinned-dist.sh  verify-cargo-release-metadata.mjs  verify-dependency-boundaries.mjs  verify-dependency-boundaries.test.mjs  verify-dist-plan.mjs  verify-duplicate-dependencies.mjs  verify-third-party-notices.mjs  zed-query-contract.mjs  zed-query-nodes.json  zed-release-smoke.mjs
web-worker/: README.adoc  bundler-entry.mjs  client.mjs  contracts.mjs  controller.mjs  controller.test.mjs  cross-runtime.test.mjs  index.d.mts  index.mjs  package-api.test.mjs  package.json  protocol.generated.d.mts  protocol.generated.mjs  release-manifest.test.mjs  tsconfig.json  worker.mjs
(+76 files in other folders)
