[workspace]
members = [
  "crates/adocweave",
  "crates/adocweave-cli",
  "crates/adocweave-host",
  "crates/adocweave-lsp",
  "crates/adocweave-wasm",
]
exclude = ["editors/zed"]
resolver = "2"

[workspace.package]
edition = "2024"
homepage = "https://github.com/KeishiS/AdocWeave"
license = "MIT OR Apache-2.0"
publish = false
repository = "https://github.com/KeishiS/AdocWeave"
rust-version = "1.97.1"
version = "0.6.1"

# The profile used by dist 0.32.0 for release artifacts.
[profile.dist]
inherits = "release"
lto = "thin"
codegen-units = 1
debug = 0
panic = "abort"
strip = "symbols"

# Size-oriented profile for the browser WASM artifact. Native release assets use
# `dist`, which remains tuned independently.
[profile.browser]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
debug = 0
panic = "abort"
strip = "symbols"
