[package]
name = "adocweave-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
adocweave = { path = "../crates/adocweave" }
libfuzzer-sys = "0.4"

[workspace]

[[bin]]
name = "analyze"
path = "fuzz_targets/analyze.rs"
test = false
doc = false
bench = false

[[bin]]
name = "process"
path = "fuzz_targets/process.rs"
test = false
doc = false
bench = false

[[bin]]
name = "render"
path = "fuzz_targets/render.rs"
test = false
doc = false
bench = false
