[package]
name = "adocweave-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Language Server for AdocWeave"

[dependencies]
adocweave = { path = "../adocweave" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
path = "src/lib.rs"

[[bin]]
name = "adocweave-lsp"
path = "src/main.rs"
