[package]
name = "adocweave-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Language Server for AdocWeave"

[dependencies]
adocweave = { path = "../adocweave" }
adocweave-host = { path = "../adocweave-host" }
async-lsp = { version = "0.2.4", default-features = false, features = [
  "omni-trait",
  "stdio",
  "tracing",
  "tokio",
] }
futures = { version = "0.3", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
  "io-std",
  "io-util",
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
] }
tokio-util = { version = "0.7", features = ["compat"] }
tower = "0.5"

[lib]
path = "src/lib.rs"

[[bin]]
name = "adocweave-lsp"
path = "src/main.rs"
