[package]
name = "adocweave-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Versioned WebAssembly adapter for AdocWeave"

[dependencies]
adocweave = { path = "../adocweave" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "=0.3.98"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "=0.2.121"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "adocweave-conformance-native"
path = "src/bin/conformance-native.rs"
