[package]
name = "adocweave"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "An AsciiDoc processor with lossless syntax and language services"

[dependencies]
sha2 = { version = "0.10.9", default-features = false }

[lib]
path = "src/lib.rs"

[[bin]]
name = "adocweave"
path = "src/main.rs"
