[package]
name = "adocweave-zed"
version = "0.1.0-rc.5"
edition = "2021"
license = "MIT"
publish = false
repository = "https://github.com/KeishiS/AdocWeave"
rust-version = "1.86"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
lzma-rs = "0.3.0"
sha2 = "0.10.9"
tar = { version = "0.4.46", default-features = false }
zed_extension_api = "0.7.0"
